# fibsem

./: .gitignore  404.html  CHANGES.md  FibsemManipulatorWidget.py  FibsemMinimapWidget.py  INSTALLATION.md  ImageSettingsWidget.py  Install_TESCAN.md  MANIFEST.in  README.md  TODO.md  connect.py  environment.yml  index.html  install.bat  install.sh  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements-3.8.txt  requirements-headless.txt  requirements.txt  run.sh  run_ui.bat  setup.cfg  test.tif  test_images.tif
.github/workflows/: ci.yml  docs.yml  python-package.yml
automation/: index.html
doc_v2/: index.html
docs/: Examples.md  GettingStarted.md  OpenFIBSEM Documentation.md  automation.md  doc_v2.md  examples.md  features.md  index.md  ml.md  ml_details.md  ml_feature_detection.md  motivation.md  notes.txt  reference.md  roadmap.md  started.md  system_setup.md
docs/user_guide/: connection.md  detection.md  guide.md  imaging.md  manipulator.md  milling.md  movement.md  system_setup.md
example/: OpenFIBSEM_Ex_Imaging.py  OpenFIBSEM_Ex_Milling.py  OpenFIBSEM_Ex_Movement.py  autolamella.py  example.ipynb  example.py  example_OpenFIBSEM.PY  example_imaging.py  example_milling.py  example_movement.py  example_notebook.ipynb  lens_milling.py  lithography.py  profile.npy  protocol_autolamella.yaml  protocol_lens_milling.yaml  protocol_lithography.yaml  protocol_slice_and_view.yaml  slice_and_view.py  sliceview.ipynb  visualisation.py
example/protocol/: protocol.yaml
examples/: index.html
features/: index.html
fibsem/: 2022-11-17.01-35-21PM_ib.tif  FibsemAlignment.py  FibsemMicroscope.py  FibsemMilling.py  GIS.py  __init__.py  _version.py  acquire.py  alignment.py  alignment2.py  bitmap_check.ipynb  calibration.py  config.py  configuration.py  constants.py  conversions.py  dataset.py  fibsemImage.py  fibsem_microscope_testing.ipynb  fourier.py  funky tescan error when reading beam current.txt  gis.py  labelling.py  microscope.py  milling.py  movement.py  napari.yaml  notebook.ipynb  old_alignment.py  patterning.py  pipeline.ipynb  segmentation_config.py  spoof_adorned_image.py  structures.py  test.tif  testing.ipynb  testing.py  thermo_microscope_testing.ipynb  train.py  transformations.py  (+2 more)
fibsem/chat/: .gitignore  main.py  requirements.txt
fibsem/config/: calibrated_state.yaml  config.yaml  default-configuration.yaml  deposition.dbp  microscope-configuration-demo2.yaml  microscope-configuration.yaml  model.yaml  odemis-configuration.yaml  positions.yaml  protocol.yaml  system.yaml  tescan-configuration.yaml  tescan_manipulator.yaml  test.yaml  tfs-aquilos2-configuration.yaml  tfs-arctis-configuration.yaml  tfs-hydra-configuration.yaml  user-configurations.yaml
fibsem/correlation/: README.md  __init__.py  app.py  correlation_v2.py  io.py  util.py
fibsem/db/: app.py  config.yaml  notebook.ipynb  util.py
fibsem/detection/: app.py  app2.py  config-autolamella-liftout-hf-mega.yaml  config-autolamella-liftout.yaml  config-autolamella-serial-liftout-hf-mega.yaml  config-autolamella-serial-liftout.yaml  config-autolamella-waffle-v2-hf-mega.yaml  config-autolamella-waffle-v2.yaml  config-autolamella-waffle.yml  config-autoliftout-dm-embryo.yml  detection.py  evaluation.py  evaluation_summary_streamlit.py  evalulation.ipynb  grid_plot_summary.py  model_evaluation.py  notebook copy.ipynb  notebook.ipynb  run_evaluation.py  test_image.tif  test_image_2.tif  utils.py
fibsem/fm/: logo.py
fibsem/imaging/: __init__.py  _tile.py  autogamma.py  masks.py  spot.py  tiled.py  utils.py
fibsem/log/: positions.yaml
fibsem/microscopes/: notebook.ipynb  odemis_microscope.py  simulator.py  tescan.py
ml/: index.html
ml_details/: index.html
ml_feature_detection/: index.html
motivation/: index.html
new_tests/: test_check.py  test_config_loading.py  test_connection.py  test_constants.py  test_conversions.py  test_structures.py
reference/: index.html
roadmap/: index.html
scratch/: ccd.py  dev.ipynb  development.ipynb  micro_manager_interface.ipynb  milling.ipynb  napari_sc.py  notebook.ipynb  pattern_image.ipynb  testing.ipynb
scripts/: arctis_notebook.ipynb  compat-notebook.ipynb  convert_to_nnunet_dataset.py  convert_to_onnx.py  export_nnunet_checkpoint.py  generate_segmentation_objects.py  huggingface.ipynb  install.bat  notebook.ipynb  onnx_notebook.ipynb  onnx_pred.py  prototype_demo2.py  run_ui.bat  shortcut.py  stack_Arctis_Script.ipynb  test-alignment-script.py  test_installation.py
site/: 404.html  index.html  objects.inv  sitemap.xml
started/: index.html
test_images/: image_ChanA_000003-tif.hdr  image_ChanA_000003.tif  test.tif
tests/: formal_testing.ipynb  nanomanipulator_testing.ipynb  tescan-test-notebook.ipynb  test_Thermo_Imaging.py  test_acquire.py  test_acquire_image_api.py  test_alignment.py  test_config_loading.py  test_connection.py  test_conversions.py  test_detection.py  test_example.py  test_image.py  test_microscope.py  test_movement.py  test_structures.py  test_tescan.py  test_utils.py
zarr folder/: shapes.csv
(+325 files in other folders)
