[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fibsem"
version = "0.3.5"
description = "a universal api for fibsem control"
authors = [
    {name = "Patrick Cleeve", email = "patrick@openfibsem.org"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: napari",
]

dependencies = [
    "tifffile>=2021.7.2",
    "numpy>=1.23.5,<=2.0.0",
    "scipy>=1.10.0",
    "opencv-python>=4.7.0.72",
    "scikit-image>=0.19.3",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "pytest>=7.2.2",
    "petname>=2.6",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/DeMarcoLab/fibsem"
"Bug Tracker" = "https://github.com/DeMarcoLab/fibsem/issues"

[project.optional-dependencies]
ml = [
    "zarr>=2.13.6",
    "dask>=2023.3.0",
    "torch>=2.0.0,<=2.1.2",
    "torchvision>=0.15.1",
    "segmentation-models-pytorch>=0.3.2",
    "plotly>=5.14.1",
    "kaleido==0.2.0",
    "transformers>=4.36.2",
]
ui = [
    "napari>=0.4.17,<=0.5.3",
    "pyqt5>=5.15.9",
    "matplotlib_scalebar>=0.8.1",
]
odemis = [
    "pylibtiff"
]

[project.scripts]
fibsem_ui = "fibsem.ui.FibsemUI:main"
fibsem_label = "fibsem.ui.FibsemLabellingUI:main"
fibsem-generate-config = "fibsem.configuration:gen_config_cli"
fibsem-config-ui = "fibsem.ui.FibsemMicroscopeConfigurationWidget:main"

[tool.setuptools]
packages = ["fibsem"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]