[metadata]
name = fibsem
version = 0.2.0
author = Patrick Cleeve
author_email = Patrick.Cleeve@monash.edu
description = python api for advanced fibsem control
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DeMarcoLab/fibsem
project_urls =
    Bug Tracker = https://github.com/DeMarcoLab/fibsem/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires = 
    zarr
    dask
    tifffile
    numpy
    scipy
    opencv-python
    scikit-image
    tqdm
    matplotlib
    napari
    pytest


[options.entry_points]
console_scripts =
    fibsem_ui = fibsem.ui.FibsemUI:main
    fibsem_label = fibsem.ui.FibsemLabellingUI:main
    