[metadata]
name = fibsem
version = 0.3.5a0
author = Patrick Cleeve
author_email = Patrick.Cleeve@monash.edu
description = a universal api for fibsem control
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DeMarcoLab/fibsem
project_urls =
    Bug Tracker = https://github.com/DeMarcoLab/fibsem/issues
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: napari

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    fibsem_ui = fibsem.ui.FibsemUI:main
    fibsem_label = fibsem.ui.FibsemLabellingUI:main
    fibsem-generate-config = fibsem.configuration:gen_config_cli
    fibsem-config-ui = fibsem.ui.FibsemMicroscopeConfigurationWidget:main


# include yaml files
[options.package_data]
* = *.yaml
